[gd_scene load_steps=17 format=3 uid="uid://c7s0anhny6l7f"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_3pc7m"]
[ext_resource type="Texture2D" uid="uid://dcx0xixraxgwh" path="res://Player/orc_idle_256x256.png" id="2_gm0ue"]
[ext_resource type="Script" path="res://Player/harvester_tool.gd" id="3_pko8y"]
[ext_resource type="Texture2D" uid="uid://dl0umvukeorn" path="res://Player/orc_walk_1_256x256.png" id="4_s0vtj"]
[ext_resource type="Texture2D" uid="uid://bkf7qcimi56jy" path="res://Player/hit_frame_256x256.png" id="4_ukjrw"]
[ext_resource type="Texture2D" uid="uid://dj0by8i0b743c" path="res://Player/orc_walk_2_256x256.png" id="5_43oov"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7wf3i"]
radius = 28.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6mhc"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_ur6ok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rs0jn"]
resource_name = "hit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0c4c"]
_data = {
"RESET": SubResource("Animation_ur6ok"),
"hit": SubResource("Animation_rs0jn")
}

[sub_resource type="Animation" id="Animation_kijas"]
resource_name = "idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.525, 0.475), Vector2(0.5, 0.5), Vector2(0.475, 0.525)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gm0ue")]
}

[sub_resource type="Animation" id="Animation_mnhag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gm0ue")]
}

[sub_resource type="Animation" id="Animation_d6hru"]
resource_name = "walk"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.475, 0.525), Vector2(0.5, 0.5), Vector2(0.525, 0.475)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 46), Vector2(0, 36), Vector2(0, 46), Vector2(0, 36)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_43oov"), ExtResource("2_gm0ue"), ExtResource("4_s0vtj"), ExtResource("2_gm0ue")]
}

[sub_resource type="Animation" id="Animation_ucipt"]
resource_name = "jump"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_s0vtj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14ltv"]
_data = {
"RESET": SubResource("Animation_mnhag"),
"idle": SubResource("Animation_kijas"),
"jump": SubResource("Animation_ucipt"),
"walk": SubResource("Animation_d6hru")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3pc7m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 46)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gm0ue")
offset = Vector2(-4, -92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_7wf3i")

[node name="Timers" type="Node" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HarvesterTool" type="Area2D" parent="."]
visible = false
monitorable = false
script = ExtResource("3_pko8y")
max_hit_sprite_scale_difference = 0.05
damage = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarvesterTool"]
position = Vector2(96, 0)
shape = SubResource("RectangleShape2D_g6mhc")
debug_color = Color(0.718156, 0.414624, 0.643642, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="HarvesterTool/CollisionShape2D"]
position = Vector2(-3, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ukjrw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HarvesterTool"]
libraries = {
"": SubResource("AnimationLibrary_e0c4c")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_14ltv")
}

[connection signal="on_harvest_done" from="HarvesterTool" to="." method="_on_harvester_tool_on_harvest_done"]
